# gep

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gitlab-ci.yml
app/: main.py
app/routes/: register.py  unvalidated.py  validated.py
app/static/: styles.css
app/templates/: index.html  register.html  unvalidated_form.html  validated_form.html
tests/: test_register.py  test_unvalidated.py  test_validated.py
