[project]
name = "gep"
version = "2.1.0"
description = "Unvalidated vs Validated Input/Output usando FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.ruff]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
line-length = 79
indent-width = 4
